Add combined slider and text box widget.
This widgets will be used in the new Compresor2 effect but it is
designed for use in other effects as well.

Signed-off-by: Max Maisel <max.maisel@posteo.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -956,6 +956,8 @@ list( APPEND SOURCES PRIVATE
   widgets/ReadOnlyText.h
   widgets/Ruler.cpp
   widgets/Ruler.h
+  widgets/SliderTextCtrl.cpp
+  widgets/SliderTextCtrl.h
   widgets/UnwritableLocationErrorDialog.cpp
   widgets/UnwritableLocationErrorDialog.h
   widgets/Warning.cpp
