--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -949,6 +949,8 @@ list( APPEND SOURCES PRIVATE
   widgets/Overlay.h
   widgets/OverlayPanel.cpp
   widgets/OverlayPanel.h
+  widgets/Plot.cpp
+  widgets/Plot.h
   widgets/PopupMenuTable.cpp
   widgets/PopupMenuTable.h
   widgets/ProgressDialog.cpp
