Opt in for macOS dark mode support

--- a/cmake-proxies/cmake-modules/MacOSXBundleInfo.plist.in
+++ b/cmake-proxies/cmake-modules/MacOSXBundleInfo.plist.in
@@ -230,7 +230,7 @@
 	<key>NSHighResolutionCapable</key>
 	<true/>
    <key>NSRequiresAquaSystemAppearance</key>
-   <true/>
+   <false/>
 	<key>NSHumanReadableCopyright</key>
 	<string>Tenacity version ${GIT_DESCRIBE}</string>
 	<key>NSMicrophoneUsageDescription</key>
