Replace Audacity references in macOS manifest
Signed-off-by: Mondanzo <danzo@mondanzo.de>
Signed-off-by: Panagiotis Vasilopoulos <hello@alwayslivid.com>

--- a/cmake-proxies/cmake-modules/MacOSXBundleInfo.plist.in
+++ b/cmake-proxies/cmake-modules/MacOSXBundleInfo.plist.in
@@ -206,7 +206,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Wrapper</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Audacity version ${GIT_DESCRIBE}</string>
+	<string>Tenacity version ${GIT_DESCRIBE}</string>
 	<key>CFBundleIconFile</key>
 	<string>Tenacity.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -216,7 +216,7 @@
 	<key>CFBundleLongVersionString</key>
 	<string>Version ${GIT_DESCRIBE}</string>
 	<key>CFBundleName</key>
-	<string>Audacity</string>
+	<string>Tenacity</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -232,9 +232,9 @@
    <key>NSRequiresAquaSystemAppearance</key>
    <true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Audacity version ${GIT_DESCRIBE}</string>
+	<string>Tenacity version ${GIT_DESCRIBE}</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Audacity requires access to the microphone only if you intend to record from it.</string>
+	<string>Tenacity requires access to the microphone only if you intend to record from it.</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
