Added Tenacity version in CMakeLists.txt
Doesn't change anything functionality-wise for now, particularly because of
my hesitation with this change as far as hard-coding the version again as a
fallback is concerned.

Audacity's version variable was also reverted in contrast to
56c953a14d343d77f9bf9abb5a6775add50a185a for compatibility reasons with older
project files or for project file compatibility with newer versions of
Audacity.

Signed-off-by: Panagiotis Vasilopoulos <hello@alwayslivid.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,10 +50,21 @@ if(NOT GIT_FOUND)
   find_package( Git )
 endif()
 
-set( AUDACITY_VERSION 0 ) # Major version
+# ~~~~~~~~~
+#  Version
+# ~~~~~~~~~
+
+# Audacity version that Tenacity is based on
+set( AUDACITY_VERSION 3 ) # Major version
 set( AUDACITY_RELEASE 0 ) # Minor version
-set( AUDACITY_REVISION 0 ) # Revision version
+set( AUDACITY_REVISION 4 ) # Revision version
 set( AUDACITY_MODLEVEL 0 ) # Additional version detail
+
+# Tenacity's version
+set( TENACITY_VERSION 0 ) # Major version
+set( TENACITY_RELEASE 1 ) # Minor version
+set( TENACITY_REVISION 0 ) # Revision version
+set( TENACITY_MODLEVEL 0 ) # Additional version detail
 set( GIT_DESCRIBE "unknown" )
 
 if( GIT_FOUND )
