Enable auto runs of flatpak CI
Flatpak CI should now run automatically when flatpak specific files are changed

Signed-off-by: Emily Mabrey <emabrey@tenacityaudio.org>

--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -1,7 +1,11 @@
 name: Packaging
 on:
   push:
-    branches: [master]
+    branches:
+      - master
+  pull_request:
+    paths:
+      - /packaging/flatpak/**
   workflow_dispatch:
 
 jobs:
